--- a/templates/base.html
+++ b/templates/base.html
@@ -58,6 +58,7 @@
     <div class="row">
 
         <div class="col-lg-3">
+            <a href="{% url 'games:game_add' %}" class="add-game btn btn-dark col">Add Game</a>
             <h1 class="my-4">Shop Name</h1>
             <div class="list-group">
                 <a href="#" class="list-group-item active">Category 1</a>
